# CryptoScanner

./: .gitignore  DASHBOARD_ORCHESTRATOR_PROMPT.md  ORCHESTRATOR_PROMPT.md  README.md  pyproject.toml  pytest.ini
.claude/: dashboard_prd.json  prd.json
.claude/docs/: ARCHITECTURE.md  DASHBOARD_PLAN.md  PLAN.md
research/data-apis/: SPEC.md
research/quant-math/: SPEC.md
src/quant_scanner/: __init__.py  __main__.py  cli.py  dashboard.py  ingestion_engine.py  math_engine.py  scan_store.py  scheduler.py  screener_engine.py  server.py  ws_manager.py
src/quant_scanner/static/: charts.js  style.css
src/quant_scanner/templates/: index.html
src/quant_scanner/templates/partials/: status.html  table.html
tests/: conftest.py  test_cli.py  test_ingestion.py  test_integration_dashboard.py  test_live.py  test_math.py  test_scaffold.py  test_scan_store.py  test_scheduler.py  test_screener.py  test_server.py  test_ws_manager.py
