[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-scanner"
version = "0.1.0"
description = "Crypto Quant Alpha Scanner — find low-cap altcoins with high Beta/Correlation to BTC"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
    "pandas>=2.1",
    "numpy>=1.26",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["src"]
